# tamagooshi

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  ruff.toml
hub/: .dockerignore  Dockerfile  pyproject.toml
hub/backend/: Dockerfile  pyproject.toml
hub/backend/src/: __main__.py  app.py
hub/backend/tests/: test_adpcm.py  test_agent_registry.py  test_ble.py  test_brand_store.py  test_brands_api.py  test_bridge.py  test_claude_backend.py  test_config.py  test_config_api.py  test_config_store.py  test_connection_api.py  test_cursor_backend.py  test_datadog_source.py  test_domain.py  test_flash_api.py  test_gen_parity.py  test_inbound.py  test_metric_status.py  test_posthog_source.py  test_publisher.py  test_secrets.py  test_settings.py  test_voice_assembler.py  test_worker.py
hub/broker/: mosquitto.conf
hub/console/: app.css  index.html
hub/console/js/: catalog.gen.js  main.js
hub/macos/scripts/: build.sh  dmg.sh  hubd.spec
hub/src/: __main__.py  app.py  pipeline.py  worker.py
hub/src/api/: __init__.py  brands.py  deps.py  events.py  flash.py  sources.py  status.py  ui.py
hub/src/config/: __init__.py  loader.py  models.py  (+2 more)
hub/tests/: test_agent_registry.py  test_ble.py  test_brand_store.py  test_brands_api.py  test_bridge.py  test_claude_backend.py  test_config.py  test_connection_api.py  test_cursor_backend.py  test_datadog_source.py  test_demo_source.py  test_domain.py  test_gen_parity.py  test_inbound.py  test_posthog_source.py  test_protocol.py  test_publisher.py  test_secrets.py  test_settings.py
(+576 files in other folders)
